2013-04-09 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/extensions.php: removed the link to delete or disable the
	update manager because this extension runs inner inner the guts of
	Pandora and when disabled or deleted causes more problems.
	
	Fixes: #3609993
	
	MERGED FROM THE TRUNK

2013-04-09 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_groups.php, include/functions_modules.php:
	improved the source code style.
	
	* include/styles/pandora_green.css,
	include/styles/pandora_legacy.css, include/styles/pandora.css: added
	lost styles for color of rows in group status page.
	
	Fixes: #3576296

2013-04-04  Junichi Satoh  <junichi@rworks.jp>

	* images/status_sets/color_text/agent_critical_ball.png,
	images/status_sets/color_text/agent_down_ball.png,
	images/status_sets/color_text/agent_no_monitors_ball.png,
	images/status_sets/color_text/agent_ok_ball.png,
	images/status_sets/color_text/agent_warning_ball.png,
	images/status_sets/color_text/alert_disabled_ball.png,
	images/status_sets/color_text/alert_fired_ball.png,
	images/status_sets/color_text/alert_not_fired_ball.png,
	images/status_sets/color_text/module_critical_ball.png,
	images/status_sets/color_text/module_no_data_ball.png,
	images/status_sets/color_text/module_warning_ball.png,
	images/status_sets/color_text/server_down_ball.png,
	images/status_sets/color_text/server_ok_ball.png,
	images/status_sets/color_text/severity_informational.png,
	images/status_sets/color_text/severity_maintenance.png,
	images/status_sets/color_text/severity_normal.png,
	images/status_sets/color_text/severity_warning.png: Added missing
	image files.

	Merged from trunk.

2013-04-03  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/alert_actions.php: Fixed that any groups are shown
	to all users even if user has no permission to access the group.

	Merged from trunk.

2013-04-01  Sancho Lerena <slerena@artica.es>

	* operation/agentes/sla_view.php,